[Mobile] Crash Fix on Loading New Game - fix #2046